# nn_class

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
nn_class/: CMakeLists.txt  CMakeLists_old.txt  nn_class.cbp
nn_class/include/: Kernels_manager.hpp  NN.hpp  neuron.h
nn_class/include/activations/: Activation.hpp  LeakyReLU_activation.hpp  ReLU_activation.hpp  Sigmoid_activation.hpp  Softmax_activation.hpp  Tanh_activation.hpp
nn_class/include/layers/: Convolutional_layer.hpp  Dense_layer.hpp  Fully_connected_layer.hpp  Image_resize_layer.hpp  Layer.hpp
nn_class/include/losses/: LogLoss.hpp  Loss.hpp  MAE.hpp
nn_class/include/metrics/: Metrics.hpp  Multiclass_accuracy.hpp  Multilabel_accuracy.hpp
nn_class/include/optimizers/: SGD_optimizer.hpp  optimizer.hpp
nn_class/kernels/: test_kernel.cl
nn_class/kernels/activations/Activation/: activation_activate_kernel.cl  activation_multiply_ngbad_kernel.cl
nn_class/kernels/activations/LeakyReLU_activation/: leaky_relu_activation_activate_kernel.cl  leaky_relu_activation_multiply_ngbad_kernel.cl
nn_class/kernels/activations/ReLU_activation/: relu_activation_activate_kernel.cl  relu_activation_multiply_ngbad_kernel.cl
nn_class/src/: NN.cpp  example.cpp  main.cpp
nn_class/src/activations/: Activation.cpp
nn_class/src/layers/: Convolutional_layer.cpp  Dense_layer.cpp  Fully_connected_layer.cpp  Image_resize_layer.cpp  Layer.cpp
nn_class/src/losses/: Loss.cpp
nn_class/src/optimizers/: Optimizer.cpp  SGD_optimizer.cpp
(+40 files in other folders)
